--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -23,6 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity 
+            android:name="com.coolweather.app.activity.WeatherActivity"
+            ></activity>
+        <receiver android:name="com.coolweather.app.receiver.UpdateWeatherInfoReceiver"></receiver>
+        <service android:name="com.coolweather.app.service.UpdateWeatherInfoService"></service>
     </application>
 
 </manifest>
